# Welcome_Repo

./: .env.sample  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api_v1/: __init__.py  error_models.py  exeptions.py  routers.py
api_v1/auth/: schemas.py  views.py
api_v1/redirect_servise/: common.py  dao.py  exceptions.py  schemas.py  views.py
api_v1/tests/: conftest.py  test_urls.py  test_users.py
api_v1/users/: dao.py  tasks.py  views.py
app_includes/: __init__.py  logs_errors.py  middlewares.py
async_alembic/: env.py
async_alembic/versions/: 2024_12_12_1935-ae5175a92845_add_user_model.py  2025_05_24_1000-6cd5d1823e11_.py  2025_05_24_1507-782c8c47fcbd_.py  2025_05_24_1537-1c56a922c8b0_.py
config/: __init__.py  config.py
config/alembic/: __init__.py  alembic_helper.py
config/celery/: connection.py
config/dao/: base_dao.py
config/database/: db_helper.py
config/models/: __init__.py  base.py  urls.py  user.py
config/setup_logs/: logging.py
docker/celery/beat/: start
docker/fastapi/: Dockerfile
